<resources>
    <string name="app_name">Shoopa Cafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Main Activity
    <string name="donutButton">Donut</string>
    <string name="coffeeButton">Coffee</string>
    <string name="cartButton">Cart</string>
    <string name="historyButton">History</string>

    //Donut
    <string name="addButton">Add to Cart</string>
    <string name="quantityUp">+</string>
    <string name="quantityDown">-</string>

    <string-array name="donut_flavors">
        <item>Tuna Donut</item>
        <item>Mint Donut</item>
        <item>Space Donut</item>
        <item>Sus Donut</item>
        <item>Tomato Sauce Donut</item>
        <item>Glowstone Donut</item>
        <item>Strawberry Donut</item>
        <item>Chocolate Donut</item>
        <item>MacnCheese Donut</item>
        <item>Cat Donut Hole</item>
        <item>Dog Donut Hole</item>
        <item>Banana Donut Hole</item>
    </string-array>

    <string-array name="donut_prices">
        <item>1.59</item>
        <item>1.59</item>
        <item>1.59</item>
        <item>1.59</item>
        <item>1.59</item>
        <item>1.59</item>
        <item>1.79</item>
        <item>1.79</item>
        <item>1.79</item>
        <item>0.39</item>
        <item>0.39</item>
        <item>0.39</item>
    </string-array>

    //Coffee
    <string name="coffeeType1">Sweet Cream</string>
    <string name="coffeeType2">French Vanilla</string>
    <string name="coffeeType3">Irish Cream</string>
    <string name="coffeeType4">Caramel</string>
    <string name="coffeeType5">Mocha</string>
    <string name="subtotalFieldCoffee">Subtotal</string>
    <string name="orderButton">Add to Order</string>
    <string name="spinnerDescription">Select Coffee Size</string>
    <string name="coffeeLogoDescription">Coffee Logo</string>
    <string name="coffeeTitleDescription">Order Coffee</string>

    <string-array name="coffeeSizes">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>

    //Cart
    <string name="subtotalFieldCart">Subtotal</string>
    <string name="salesField">Sales Tax</string>
    <string name="totalField">Total</string>
    <string name="cartTitleDescription">View Order</string>
    <string name ="placeOrderButton">Place Order</string>

    //History
    <string name="historyTitle">Order History</string>
    <string name="startDescription">Shoopa Cafe</string>
    <string name="donutImage">Donut</string>
    <string name="donut_logo">Donut Logo</string>
    <string name="coffee_logo">Coffee Logo</string>
    <string name="donuts_title">Donuts Title</string>

</resources>