<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/startScreen"
    tools:context=".StartFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="431dp"
        android:layout_height="779dp"
        android:layout_marginBottom="30dp"
        android:background="@color/coffeeScreen"
        android:contentDescription="@string/startDescription"
        android:src="@drawable/shoopacafelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/donut_logo"
        android:src="@drawable/donutslogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/coffee_logo"
        android:src="@drawable/coffeelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>